--- a/style.css
+++ b/style.css
@@ -1,19 +1,153 @@
+@import url('https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Old+Standard+TT&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Old+Standard+TT:ital@1&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Rakkas&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Fraunces:ital,wght@0,300;0,400;1,300;1,400&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Metamorphous&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kreon:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Belleza&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Almendra&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fondamento&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Milonga&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Calistoga&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rosarivo&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rosarivo:ital@0;1&display=swap');
+@charset "UTF-8";
 
+@font-face {
+  font-family: 'STIXGeneral';
+  src: url('/files/fonts/stixgeneral-webfont.eot');
+  src: local('STIXGeneral'),local('STIXGeneral-Regular'), url('/files/fonts/stixgeneral-webfont.woff') format('woff'), url('/files/fonts/stixgeneral-webfont.ttf') format('truetype'), url('/files/fonts/stixgeneral-webfont.svg#webfontZXtFAA5Q') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'STIXGeneral';
+  src: url('/files/fonts/stixgeneralitalic-webfont.eot');
+  src: local('STIXGeneralItalic'),local('STIXGeneral-Italic'), url('/files/fonts/stixgeneralitalic-webfont.woff') format('woff'), url('/files/fonts/stixgeneralitalic-webfont.ttf') format('truetype'), url('/files/fonts/stixgeneralitalic-webfont.svg#webfont2oJeLJIt') format('svg');
+  font-weight: normal;
+  font-style: italic;
+}
+@font-face {
+  font-family: 'STIXGeneral';
+  src: url('/files/fonts/stixgeneralbol-webfont.eot');
+  src: local('STIXGeneralBol'),local('STIXGeneral-Bold'), url('/files/fonts/stixgeneralbol-webfont.woff') format('woff'), url('/files/fonts/stixgeneralbol-webfont.ttf') format('truetype'), url('/files/fonts/stixgeneralbol-webfont.svg#webfontwFpnxWyx') format('svg');
+  font-weight: bold;
+  font-style: normal;
+}
+
+:root {
+  --color_base: #191919;
+  --color_pen: #fff;
+  --size: 20vmin;
+  --fog: calc(var(--size) / 1.2);
+  --scale: 4.8;
+}
+
+.p-flex {
+  display: flex;
+}
 
 body {
-  font-family: 'Old Standard TT', serif;
-  background-color: #feefe5;
-  color: #aa2724;
+font-family: 'Belleza', sans-serif;
+background: rgb(254,239,229);
+background: linear-gradient(0deg, rgba(254,239,229,1) 0%, rgba(170,39,36,0.7497373949579832) 100%);
+color: #aa2724;
   padding: 0px;
   overflow-x: hidden;
-  margin-top: 25px;
+  margin-top: 20px;
+  counter-reset: footnotes;
+}
+
+sup {
+  content: '['counter(footnotes) ']';
+  /* 1 */
+  font-size: 10pt;
+  /* 3 */
+  margin-left: 2px;
+  /* 4 */
+  margin-top: 10px;
+  color: #aa2724;
+  /* 5 */
+  text-decoration: underline;
+  /* 5 */
+  cursor: pointer;
+  /* 5 */
+}
+
+footer {
+  font-size: 12pt;
+  width: 95%;
+  margin-top: 50px;
+  border-top: 0px solid silver;
+  line-height: normal;
+  padding-bottom: 10px;
+
+}
+
+footer ol {
+  padding-left: 20px;
+  font-weight: normal;
+}
+
+
+
+
+/**
+ * Initialiazing a `footnotes` counter on the wrapper
+ */
+/**
+ * Inline footnotes references
+ * 1. Increment the counter at each new reference
+ * 2. Reset link styles to make it appear like regular text
+ */
+[aria-describedby="footnote-label"] {
+  counter-increment: footnotes;
+  /* 1 */
+  text-decoration: none;
+  /* 2 */
+  color: inherit;
+  /* 2 */
+  cursor: default;
+  /* 2 */
+  outline: none;
+  /* 2 */
+}
+
+/**
+ * Actual numbered references
+ * 1. Display the current state of the counter (e.g. `[1]`)
+ * 2. Align text as superscript
+ * 3. Make the number smaller (since it's superscript)
+ * 4. Slightly offset the number from the text
+ * 5. Reset link styles on the number to show it's usable
+ */
+/**
+ * Resetting the default focused styles on the number
+ */
+[aria-describedby="footnote-label"]:focus::after {
+  outline: thin dotted;
+  outline-offset: 2px;
+}
+
+[aria-label="Back to content"] {
+  font-size: 0.8em;
+}
+
+/**
+ * Highlight target note
+ */
+footer :target {
+  background: transparent;
+}
+
+/**
+ * Visually hidden yet accessible content
+ */
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  visibility: hidden;
+  opacity: 0;
 }
 
 a {
@@ -24,30 +158,29 @@ a {
 a:link {
   color: #aa2724;
   text-decoration: none;
-  font-family: 'Old Standard TT', serif;
+font-family: 'Belleza', sans-serif;
 }
 
 /* visited link */
 a:visited {
   color: #aa2724;
   text-decoration: none;
-  font-family: 'Old Standard TT', serif;
+font-family: 'Belleza', sans-serif;
 }
 
 /* mouse over link */
 a:hover {
   color: #aa2724;
   text-decoration: none;
-  font-family: 'Old Standard TT', serif;
+font-family: 'Belleza', sans-serif;
 }
 
 /* selected link */
 a:active {
-  color: #000000;
+  color: #aa2724;
   text-decoration: none;
-  font-family: 'Old Standard TT', serif;
+font-family: 'Belleza', sans-serif;
 }
-
 
 ::selection {
   color: #aa2724;
@@ -74,133 +207,187 @@ a:active {
   background-color: transparent;
 }
 
-
 b {
   font-weight: 700;
 }
-
 
 ol {
   padding-left: 1.2em;
 }
 
-.header {
-  text-align: center;
-  margin: 0 auto;
-  width: 60%;
-}
-
-
-
-.title {
-  -webkit-animation: squiggly-anim 1.2s linear infinite;
-          animation: squiggly-anim 0.7s linear infinite;
-}
-
-.title {
+.name {
   text-align: left;
-  font-family: 'Cardo', serif;
+  font-size: 12pt;
   color: #aa2724;
-  margin-top: 30px;
-  margin-left: 30px;
+}
+
+
+.halloctober {
   width: 100%;
+  height: 100%;
+  margin-top: 20px;
+  margin-left: -50px;
+}
+
+.halloctober__banner {
+  margin: auto;
+  padding: 0px;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
+.typo {
+  height: 100%;
+  cursor: default;
+font-family: 'Cardo';
+  color: #aa2724;
   font-size: 50pt;
-  line-height: 1.1em;
+  font-weight: normal;
+  width: 30%;
+  font-weight: 700;
+  letter-spacing: 0.1rem;
+  margin: auto;
+  outline: none;
+  position: relative;
+  transform: skew(8deg, 3deg);
+  -webkit-animation: float 5s ease-in-out infinite;
+  animation: float 5s ease-in-out infinite;
+  -moz-transition:all 400ms linear;
+    -webkit-transition:all 400ms linear;
+    -o-transition:all 400ms linear;
+    transition:all 400ms linear;
+}
 
+.typo:hover+.fog {
+  -webkit-animation-play-state: paused;
+  animation-play-state: paused;
+}
+
+.typo::before, .typo::after {
+  color: transparent;
+  content: "I’ve Smelled the Blood, That Touches My Tongue.";
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -10;
+}
+
+.typo::before {
+  -webkit-animation: move_upper_shadow 5s ease-in-out infinite;
+  animation: move_upper_shadow 5s ease-in-out infinite;
+  opacity: 0;
+  text-shadow: 6px 0 2px rgba(179, 8, 8, 0.4), 12px 0 2px rgba(249, 231, 225, 0.41);
+}
+
+.typo::after {
+  -webkit-animation: move_bottom_shadow 5s ease-in-out infinite;
+  animation: move_bottom_shadow 5s ease-in-out infinite;
+  text-shadow: 2px 4px 2px rgba(179, 8, 8, 0.4), 4px 8px 2px rgba(0, 0, 0, 0.73);
 }
 
 
-#title2 {
-  display:inline-block;
-  overflow:hidden;
-  white-space:nowrap;
+
+@-webkit-keyframes move_upper_shadow {
+  0%, 90%, 100% {
+    opacity: 0;
+    transform: translateX(-2%);
+  }
+
+  30% {
+    opacity: 0.5;
+    transform: translateX(0);
+  }
 }
 
-#title2:first-of-type {    /* For increasing performance
-                       ID/Class should've been used.
-                       For a small demo
-                       it's okaish for now */
-  animation: showup 10s infinite;
+@keyframes move_upper_shadow {
+  0%, 90%, 100% {
+    opacity: 0;
+    transform: translateX(-2%);
+  }
+
+  30% {
+    opacity: 0.8;
+    transform: translateX(0);
+  }
 }
 
-#title2:last-of-type {
-  width:0px;
-  animation: reveal 10s infinite;
+@-webkit-keyframes move_bottom_shadow {
+  0%, 90%, 100% {
+    opacity: 0.8;
+    transform: translate(0, 0);
+  }
+
+  30% {
+    opacity: 0;
+    transform: translateY(-5.3%);
+  }
 }
 
-#title2:last-of-type span {
-  margin-left:-355px;
-  animation: slidein 7s infinite;
+@keyframes move_bottom_shadow {
+  0%, 90%, 100% {
+    opacity: 0.8;
+    transform: translate(3, 10);
+  }
+
+  30% {
+    opacity: 0;
+    transform: translateY(-5.3%);
+  }
 }
 
-@keyframes showup {
-    0% {opacity:0;}
-    20% {opacity:1;}
-    80% {opacity:1;}
-    100% {opacity:0;}
+@-webkit-keyframes float {
+  50% {
+    transform: scaleY(1.01) skew(-10deg, -2deg);
+  }
 }
 
-@keyframes slidein {
-    0% { margin-left:-800px; }
-    20% { margin-left:-800px; }
-    35% { margin-left:0px; }
-    100% { margin-left:0px; }
+@keyframes float {
+  50% {
+    transform: scaleY(1.01) skew(-10deg, -2deg);
+  }
 }
 
-@keyframes reveal {
-    0% {opacity:0;width:0px;}
-    20% {opacity:1;width:0px;}
-    30% {width:355px;}
-    80% {opacity:1;}
-    100% {opacity:0;width:355px;}
-}
+@media (prefers-reduced-motion: reduce) {
+  .typo {
+    -webkit-animation: none;
+    animation: none;
+    transform: none;
+  }
 
+  .typo::before, .typo::after {
+    -webkit-animation: none;
+    animation: none;
+  }
+}
 
 .note {
   font-size: 12pt;
   color: #aa2724;
-line-height: normal;
+  line-height: normal;
 }
 
-.left{
-  background-color:#feefe5;
-  margin-top: -25px;
-background-size: auto 100%;
-background-repeat: no-repeat;
+.left {
+  background-color: transparent;
+  margin-top: 0px;
   padding: 0px;
-  width: 35%;
+  width: 40%;
   height: 100%;
   position: fixed;
   font-weight: 400;
   float: left;
   overflow-y: hidden;
   overflow-x: hidden;
-  font-family: 'Noto Serif', serif;
-font-size: 14pt;
-}
-
-
-
-
-.name {
-  text-align: left;
-  margin: 0 auto;
-  margin-top: 50px;
-  margin-left: 32px;
-  font-family: 'Cardo', serif;
-  font-size: 18pt;
-  color: #aa2724;
-  width: 100%;
 }
 
 .middle {
   padding: 0px;
-    margin-top: -10px;
-  width: 65%;
+  margin-top: 0px;
+  width: 60%;
   vertical-align: top;
   z-index: -100;
-float: right;
-    overflow: hidden;
+  float: right;
+  overflow: hidden;
 }
 
 .content {
@@ -208,23 +395,10 @@ float: right;
   margin-top: 20px;
   height: auto;
   font-size: 20pt;
-  font-family: 'Old Standard TT', serif;
+font-family: 'Belleza', sans-serif;
   font-weight: 300;
   width: 90%;
   margin-left: 31px;
-}
-
-
-.grid-item:hover {
-  opacity: 0.7;
-  -moz-transform: scale(1.07);
-  -webkit-transform: scale(1.07);
-  transform: scale(1.07);
-}
-
-.grid-item h2 {
-  margin-top: 0px;
-  z-index: 100;
 }
 
 .textWithBlur#aa2724Bg:hover :not(img) {
@@ -232,28 +406,42 @@ float: right;
 }
 
 .panel, .flip {
-  padding: 5px 10px;
+  padding: 0px 0px;
   text-align: left;
-  border: solid 0px #feefe5;
   font-size: 24pt;
   line-height: 1.4em;
-  width: 99%;
+  width: 95%;
 font-family: 'Cardo', serif;
-font-weight: 400;
+color: #aa2724;
+  font-weight: 400;
   background-color: transparent;
+  -moz-transition:all 400ms linear;
+  -webkit-transition:all 400ms linear;
+  -o-transition:all 400ms linear;
+  transition:all 400ms linear;
+}
+
+.panel, .flip:hover {
+	color: #ebaba6;
+	-moz-transition:all 400ms linear;
+    -webkit-transition:all 400ms linear;
+    -o-transition:all 400ms linear;
+    transition:all 400ms linear;
 }
 
 .panel {
-  padding: 10px;
+  padding: 0px;
+  margin-right: 15px;
   margin-top: -15px;
   display: none;
   font-size: 18pt;
   text-align: left;
-  font-family: 'Old Standard TT', serif;
+font-family: 'Belleza', sans-serif;
   font-weight: 300;
-  width: 99%;
+  width: 95%;
   line-height: 1.2em;
   background-color: transparent;
+  color: #aa2724;
 }
 
 .secret {
@@ -262,61 +450,101 @@ font-weight: 400;
   display: none;
   font-size: 20pt;
   text-align: left;
-  font-family: 'Old Standard TT', serif;
+font-family: 'Belleza', sans-serif;
   font-weight: 300;
   width: 100%;
   background-color: transparent;
 }
 
-
 p {
   margin: 0;
 }
+
 @-webkit-keyframes squiggly-anim {
   0% {
     filter: url("#squiggly-0");
   }
+
   25% {
     filter: url("#squiggly-1");
   }
+
   50% {
     filter: url("#squiggly-2");
   }
+
   75% {
     filter: url("#squiggly-3");
   }
+
   100% {
     filter: url("#squiggly-4");
   }
 }
+
 @keyframes squiggly-anim {
   0% {
     filter: url("#squiggly-0");
   }
+
   25% {
     filter: url("#squiggly-1");
   }
+
   50% {
     filter: url("#squiggly-2");
   }
+
   75% {
     filter: url("#squiggly-3");
   }
+
   100% {
     filter: url("#squiggly-4");
   }
 }
 
-
-
-
 @media screen and (max-width: 700px) {
+  .halloctober {
+    width: 100%;
+    height: 100%;
+    margin-top: 30px;
+    margin-left: -30px;
+  }
+
+  .halloctober__banner {
+    margin: auto;
+    padding: 0px;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+  }
+
+  .typo {
+    height: 100%;
+    float: left;
+    cursor: default;
+font-family: 'Cardo', serif;
+    color: #aa2724;
+    font-size: 40pt;
+    padding-bottom: 20px;
+    font-weight: normal;
+    width: 50%;
+    font-weight: 700;
+    letter-spacing: 0.1rem;
+    margin: auto;
+    outline: none;
+    position: relative;
+    transform: skew(10deg, 2deg);
+    -webkit-animation: float 5s ease-in-out infinite;
+    animation: float 5s ease-in-out infinite;
+  }
 
   #myBtn {
     display: none;
     position: fixed;
     bottom: 30px;
-    margin-right: 10px;
+    margin-right: -10px;
     width: 70px;
     z-index: 99;
     font-size: 50px;
@@ -333,96 +561,64 @@ p {
     background-color: transparent;
   }
 
-
-  .left{
+  .left {
     padding: 20px;
-background-color: #feefe5;
     margin-top: -25px;
-    margin-bottom: 10px;
     width: 100%;
-    height: 40%;
+    height: 100%;
     position: relative;
     display: block;
     overflow-x: hidden;
     overflow-y: visible;
-    font-family:'Noto Serif', serif;
+    font-family: 'Noto Serif', serif;
     font-size: 14pt;
     line-height: 1.2;
   }
 
   .middle {
     padding: 0px;
-      margin-top: -10px;
+    margin-top: 0px;
     width: 100%;
     vertical-align: top;
     z-index: -100;
-  float: right;
-      overflow: hidden;
-      position: relative;
-      display: block;
-  }
-
-  .header {
-    text-align: center;
-    margin: 0 auto;
-    width: 100%;
-  }
-
-
-  .title {
-    text-align: left;
-    margin-top: 0px;
-    margin-left: 0px;
-    font-family: 'Cardo', serif;
-    color: #aa2724;
-    width: 80%;
-    font-size: 40pt;
-    line-height: 1.2em;
-  }
-
-
-  .name {
-    text-align: left;
-    margin: 0 auto;
-    margin-left: 15px;
-    margin-top: 40px;
-    font-family: 'Cardo', serif;
+    float: right;
+    overflow: hidden;
+    position: relative;
+    display: block;
     font-size: 14pt;
-    color: #aa2724;
-    width: 100%;
   }
 
   .content {
     position: relative;
     height: auto;
-    font-size: 20pt;
-    font-family: 'Cardo', serif;
-    font-weight: 300;
     width: 100%;
     margin-left: 20px;
     margin-right: 0px;
     margin-top: 20px;
+    counter-reset: footnotes;
+    font-size: 14pt;
   }
 
   .panel, .flip {
     padding: 10 10px;
     text-align: left;
-    border: solid 1px #feefe5;
+    border: solid 0px #feefe5;
     font-size: 20pt;
-    width: 87.5%;
+    width: 95%;
     line-height: 1.4em;
   }
 
   .panel {
-    padding: 10px;
+    padding: 0px;
     margin-top: -15px;
     display: none;
-    font-size: 12pt;
+    font-size: 14pt;
     text-align: left;
-    font-family: 'Old Standard TT', serif;
-    font-weight: 300;
-    width: 87.5%;
+  font-family: 'Belleza', sans-serif;
+    font-weight: 500;
+    width: 95%;
   }
+
 
   .responsive {
     width: 100%;
@@ -435,9 +631,23 @@ background-color: #feefe5;
     display: none;
     font-size: 10pt;
     text-align: left;
-    font-family: 'Old Standard TT', serif;
+  font-family: 'Belleza', sans-serif;
     font-weight: 300;
     width: 100%;
     background-color: transparent;
+  }
+
+  footer {
+    font-size: 12pt;
+    width: 100%;
+    margin-top: 45px;
+    border-top: 0px solid silver;
+    line-height: normal;
+    padding-bottom: 10px;
+  }
+
+  footer ol {
+    width: 85%;
+    padding-left: 20px;
   }
 }
